--- a/src/course-mobile.html
+++ b/src/course-mobile.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" /><!--隐藏状态栏/设置状态栏颜色-->
     <meta name="format-detection" content="telephone=no; email=no" /><!--忽略自动识别数字为电话号码，邮箱账号-->
     <meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 禁止百度强制转码 -->
-	<title>西游记事</title>
+	<title>课程</title>
 	<link rel="stylesheet" type="text/css" href="dist/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/style-mobile.css">
 	<!--[if lt IE 9]>
@@ -26,8 +26,8 @@
 							<img src="dist/img/logo.png" alt="logo">
 						</a>
 					</li>
-					<li class="text-right" id="tool">
-						<a href="javascript:;">
+					<li class="text-right">
+						<a href="javascript:;" id="tool">
 							<img src="dist/img/tool.png" alt="tool">
 						</a>
 					</li>
