--- a/src/course-mobile.html
+++ b/src/course-mobile.html
@@ -17,23 +17,23 @@
 	<![endif]-->
 </head>
 <body>
+	<header class="nav-header" id="nav-header">
+		<nav class="navbar">
+			<ul>
+				<li class="text-left">
+					<a href="index.html">
+						<img src="dist/img/logo.png" alt="logo">
+					</a>
+				</li>
+				<li class="text-right">
+					<a href="javascript:;" id="tool">
+						<img src="dist/img/tool.png" alt="tool">
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 	<div id="main-content" class="main-content">
-		<header>
-			<nav class="navbar">
-				<ul>
-					<li class="text-left">
-						<a href="index.html">
-							<img src="dist/img/logo.png" alt="logo">
-						</a>
-					</li>
-					<li class="text-right">
-						<a href="javascript:;" id="tool">
-							<img src="dist/img/tool.png" alt="tool">
-						</a>
-					</li>
-				</ul>
-			</nav>
-		</header>
 		<div class="container section-banner">
 			<div></div>
 		</div>
