--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -90,11 +90,10 @@
 				<header class="text-center">
 					<h1 class="h1-line">金牌名师</h1>
 				</header>
-				<div class="photo-box clearfix index">
+				<div class="photo-box clearfix">
 					<div class="photo-info pull-left">
 						<div class="head-photo">
 							<img src="dist/img/photo1.png" alt="photo1">
-							<div class="photo-mask"></div>
 						</div>
 						<div class="introduce text-center">
 							<h3>王晓明</h3>
