--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -115,15 +115,53 @@
 				</div>
 
 
-
-
-				<div class="index-btn" id="index-btn">
-					<span class="cur"></span>
-					<span></span>
-				</div>
-
 			</article>
 
+		</div>
+		<!-- 独家保障 -->
+		<div class="container section-ensure">
+			<article>
+				<header class="text-center">
+					<h1 class="h1-line">独家保障</h1>
+				</header>
+				<div class="text-center">
+					<span>专业考前评估</span>
+					<span>|</span>
+					<span>量身制订计划</span>
+					<span>|</span>
+					<span>科学分析效果</span>
+					<span>|</span>
+					<span>即时调整策略</span>
+					<span>|</span>
+					<span>提供最优方案</span>
+				</div>
+				<div class="ensure-box clearfix">
+					<div class="pull-left text-center">
+						<img src="dist/img/8hours.png" alt="ensure">
+						<h4>领悟分数奥妙 分析应对之策</h4>
+					</div>
+					<div class="pull-left text-center">
+						<img src="dist/img/40hours.png" alt="ensure">
+						<h4>零基础攻破考点词汇</h4>
+					</div>
+					<div class="pull-left text-center">
+						<img src="dist/img/108hours.png" alt="ensure">
+						<h4>知识点的积累及融会贯通</h4>
+					</div>
+					<div class="pull-left text-center">
+						<img src="dist/img/148hours.png" alt="ensure">
+						<h4>强化知识点，从量变到质变</h4>
+					</div>
+					<div class="pull-left text-center">
+						<img src="dist/img/100hours.png" alt="ensure">
+						<h4>玩转技巧，快速提分</h4>
+					</div>
+					<div class="pull-left text-center">
+						<img src="dist/img/16hours.png" alt="ensure">
+						<h4>精准点杀，赠送考前锦囊</h4>
+					</div>
+				</div>
+			</article>
 		</div>
 		<!-- 页脚 -->
 		<footer class="footer">
