--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -125,15 +125,18 @@
 					<h1 class="h1-line">独家保障</h1>
 				</header>
 				<div class="text-center">
-					<span>专业考前评估</span>
-					<span>|</span>
-					<span>量身制订计划</span>
-					<span>|</span>
-					<span>科学分析效果</span>
-					<span>|</span>
-					<span>即时调整策略</span>
-					<span>|</span>
-					<span>提供最优方案</span>
+					<div>
+						<span>专业考前评估</span>
+						<span>|</span>
+						<span>量身制订计划</span>
+						<span>|</span>
+						<span>科学分析效果</span>
+					</div>
+					<div>
+						<span>即时调整策略</span>
+						<span>|</span>
+						<span>提供最优方案</span>
+					</div>
 				</div>
 				<div class="ensure-box clearfix">
 					<div class="pull-left text-center">
@@ -161,6 +164,18 @@
 						<h4>精准点杀，赠送考前锦囊</h4>
 					</div>
 				</div>
+			</article>
+		</div>
+		<!-- 推荐课程 -->
+		<div class="container section-recommend">
+			<article>
+				<header class="text-center">
+					<h1 class="h1-line">独家保障</h1>
+				</header>
+				<div class="text-center">
+					<p>免费赠送能力提升课程，免费赠送经典独家秘笈</p>
+					<p>免费赠送考前专业评测</p>
+					<img src="dist/img/jiawei.png" alt="jiawei"></div>
 			</article>
 		</div>
 		<!-- 页脚 -->
