--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -34,7 +34,7 @@
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content">
+	<div id="main-content" class="main-content" style="padding:50px 0;">
 
 		<!-- banner -->
 		<div class="container section-bgimg">
@@ -186,11 +186,19 @@
 			</div>
 		</footer>
 
-
-
-
-
 	</div>
+	<!-- 电话咨询 -->
+	<footer class="nav-consult clearfix" id="nav-consult">
+		<a href="javascrip:;" class="msg-consult text-center pull-left">
+			<img src="dist/img/phone.png" alt="phone">
+			<span>电话咨询</span>
+		</a>
+		<a href="javascrip:;" class="tel-consult text-center pull-left">
+			<img src="dist/img/zaixian.png" alt="tel">
+			<span>电话咨询</span>
+		</a>
+	</footer>
+	<!-- 遮罩 -->
 	<div class="mask" id="mask"></div>
 	<div class="tool-box" id="tool-box">
 		<ul class="clearfix text-center">
