--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -21,8 +21,9 @@
 	<header class="nav-header" id="nav-header">
 		<nav class="navbar">
 			<ul>
+
 				<li class="text-left">
-					<a href="index.html">
+					<a href="index-mobile.html">
 						<img src="dist/img/logo.png" alt="logo">
 					</a>
 				</li>
@@ -202,11 +203,11 @@
 	<div class="mask" id="mask"></div>
 	<div class="tool-box" id="tool-box">
 		<ul class="clearfix text-center">
-			<li><a href="#">导航一</a></li>
-			<li><a href="#">导航二</a></li>
-			<li><a href="#">导航三</a></li>
-			<li><a href="#">导航四</a></li>
-			<li><a href="#">导航五</a></li>
+			<li><a href="index-mobile.html">首页</a></li>
+			<li><a href="course-mobile.html">课程</a></li>
+			<li><a href="news-mobile.html">资讯</a></li>
+			<li><a href="contact-mobile.html">联系</a></li>
+			<li><a href="job-mobile.html">加入</a></li>
 		</ul>
 	</div>
 	<script type="text/javascript" src="dist/js/zepto.min.js"></script>
