--- a/src/index-mobile.html
+++ b/src/index-mobile.html
@@ -11,6 +11,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 禁止百度强制转码 -->
 	<title>课程</title>
 	<link rel="stylesheet" type="text/css" href="dist/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/swiper-3.2.7.min.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/style-mobile.css">
 	<!--[if lt IE 9]>
 	<script src="dist/js/html5shiv.min.js"></script>
@@ -91,30 +92,140 @@
 				<header class="text-center">
 					<h1 class="h1-line">金牌名师</h1>
 				</header>
-				<div class="photo-box clearfix">
-					<div class="photo-info pull-left">
-						<div class="head-photo">
-							<img src="dist/img/photo1.png" alt="photo1">
-						</div>
-						<div class="introduce text-center">
-							<h3>王晓明</h3>
-							<p>社会学家，教授，人文学者，商务人士</p>
-						</div>
-					</div>
 
-					<div class="photo-info pull-left">
-						<div class="head-photo">
-							<img src="dist/img/photo2.png" alt="photo1">
-							<div class="photo-mask"></div>
-						</div>
-						<div class="introduce text-center">
-							<h3>王晓明</h3>
-							<p>社会学家，教授，人文学者，商务人士</p>
-						</div>
-					</div>
+				<!--轮播图-->
+				<div class="container section-swiper">
+					<div class="swiper-container" style="padding-bottom:20px;">
+		                <div class="swiper-wrapper">
+		                    <div class="swiper-slide" >
+		                        <div class="photo-box clearfix">
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo1.png" alt="photo1">
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
 
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo2.png" alt="photo1">
+											<div class="photo-mask"></div>
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+								</div>
+		                    </div>
+		                    <div class="swiper-slide">
+		                        <div class="photo-box clearfix">
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo1.png" alt="photo1">
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo2.png" alt="photo1">
+											<div class="photo-mask"></div>
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+								</div>
+		                    </div>
+		                    <div class="swiper-slide">
+		                        <div class="photo-box clearfix">
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo1.png" alt="photo1">
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo2.png" alt="photo1">
+											<div class="photo-mask"></div>
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+								</div>
+		                    </div>
+		                    <div class="swiper-slide">
+		                        <div class="photo-box clearfix">
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo1.png" alt="photo1">
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo2.png" alt="photo1">
+											<div class="photo-mask"></div>
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+								</div>
+		                    </div>
+		                    <div class="swiper-slide">
+		                        <div class="photo-box clearfix">
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo1.png" alt="photo1">
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+
+									<div class="photo-info pull-left">
+										<div class="head-photo">
+											<img src="dist/img/photo2.png" alt="photo1">
+											<div class="photo-mask"></div>
+										</div>
+										<div class="introduce text-center">
+											<h3>王晓明</h3>
+											<p>社会学家，教授，人文学者，商务人士</p>
+										</div>
+									</div>
+								</div>
+		                    </div>
+
+		                </div>
+		                <!-- Add Pagination -->
+		                <div class="swiper-pagination" style="bottom:-2px"></div>
+		                <!-- Add Arrows -->
+		                <div class="swiper-button-next"></div>
+		                <div class="swiper-button-prev"></div>
+		            </div>
 				</div>
-
 
 			</article>
 
@@ -191,11 +302,11 @@
 	<!-- 电话咨询 -->
 	<footer class="nav-consult clearfix" id="nav-consult">
 		<a href="javascrip:;" class="msg-consult text-center pull-left">
-			<img src="dist/img/phone.png" alt="phone">
+			<img src="dist/img/zaixian.png" alt="tel">
 			<span>电话咨询</span>
 		</a>
 		<a href="javascrip:;" class="tel-consult text-center pull-left">
-			<img src="dist/img/zaixian.png" alt="tel">
+			<img src="dist/img/phone.png" alt="phone">
 			<span>电话咨询</span>
 		</a>
 	</footer>
@@ -211,6 +322,7 @@
 		</ul>
 	</div>
 	<script type="text/javascript" src="dist/js/zepto.min.js"></script>
+	<script type="text/javascript" src="dist/js/swiper-3.2.7.jquery.min.js"></script>
 	<script type="text/javascript" src="dist/js/app-mobile.js"></script>
 </body>
 </html>
