--- a/src/course-mobile.html
+++ b/src/course-mobile.html
@@ -35,7 +35,20 @@
 	</header>
 	<div id="main-content" class="main-content">
 		<div class="container section-banner">
-			<div></div>
+			<div class="text-center">
+				<h2>西游能给予你的,不仅仅是通过考试</h2>
+			</div>
+			<div class="his-box">
+				<span class="left"></span>
+				<span class="left-center"><label>2015.08</label></span>
+				<span class="center"><label class="center-label">2016.08</label></span>
+				<span class="right-center"><label>2014.08</label></span>
+				<span class="right"></span>
+				<hr />
+			</div>
+			<div class="text-center">
+				<p>社交技巧指导,一点风度+一份得体=魅力的你</p>
+			</div>
 		</div>
 		<div class="container section-course">
 			<div class="course-box col-9 clearfix text-center">
