--- a/src/news-mobile.html
+++ b/src/news-mobile.html
@@ -86,24 +86,24 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="container section-new-box hide show" id="all-news-box">
+		<!-- 院校咨询列表 -->
+		<div class="container section-new-box hide show" id="all-news-box-school">
 			<div class="hide show">
 				<ul>
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
 							<span class="title-span">心理专家辅导，积极调整心态</span>
 						</a>
 					</li>
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
 							<span class="title-span">红酒品鉴课堂，高端体验精品生活方式</span>
 						</a>
 					</li>
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
 							<span class="title-span">面试技巧，模拟实战全过程</span>
 						</a>
@@ -114,7 +114,7 @@
 			<div class="hide">
 				<ul>
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
 							<span class="title-span">心理专家辅导，积极调整心态，轻松通过考试</span>
 						</a>
@@ -127,13 +127,13 @@
 				<ul>
 
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
-							<span class="title-span">心理专家辅导，积极调整心态，轻松通过考试</span>
+							<span class="title-span">心理专家辅导，积极调整心态</span>
 						</a>
 					</li>
 					<li>
-						<a href="javascript:;">
+						<a href="newsinfo-mobile.html">
 							<img src="dist/img/sibian.png" alt="">
 							<span class="title-span">心理专家辅导，积极调整心态，轻松通过考试</span>
 						</a>
@@ -141,14 +141,59 @@
 				</ul>
 			</div>
 		</div>
-		<div class="container section-new-info hide" id="all-news-info">
-			<div style="padding:0 10px;">
-				<span id="close-news">X</span>
-				<h3 class="text-center">俄罗斯前首富涉3桩命案 遭俄全球通缉</h3>
-				<p>俄罗斯前首富、著名金融寡头霍多尔科夫斯基又摊上大事了！</p>
-				<p>两年前，他曾因俄总统普京特赦令而出狱，如今却再度遭到通缉，而且罪名更是升级到谋杀这样的重罪。</p>
-				<p>据俄罗斯卫星网23日消息，俄联邦调查委员会当天宣布了这一消息。调查委员会发言人马尔金表示，将在霍多尔科夫斯基缺席的情况下，对其下发逮捕令；并同时将其列入了海外追逃的名单之中。</p>
-				<p>据今日俄罗斯报道，早在本月月初，俄罗斯警方就已经展开了对霍多尔科夫斯基的调查。据称，他曾于1998年间，策划并实行了对西伯利亚地区城市涅夫捷尤甘斯克市长佩图科霍夫的谋杀。此外，霍多尔科夫斯基还涉嫌其他两桩谋杀未遂案。</p>
+		<!-- 教育咨询列表 -->
+		<div class="container section-new-box hide" id="all-news-box-edu">
+			<div class="hide show">
+				<ul>
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表1</span>
+						</a>
+					</li>
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表12</span>
+						</a>
+					</li>
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表1</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="hide">
+				<ul>
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表122222</span>
+						</a>
+					</li>
+
+				</ul>
+			</div>
+
+			<div class="hide">
+				<ul>
+
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表1</span>
+						</a>
+					</li>
+					<li>
+						<a href="newsinfo-mobile.html">
+							<img src="dist/img/sibian.png" alt="">
+							<span class="title-span">教育咨询列表1</span>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<footer class="footer">
