--- a/src/newsinfo-mobile.html
+++ b/src/newsinfo-mobile.html
@@ -17,6 +17,7 @@
 	<![endif]-->
 </head>
 <body>
+<!-- 导航栏 -->
 	<header class="nav-header" id="nav-header">
 		<nav class="navbar">
 			<ul>
@@ -33,64 +34,16 @@
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content">
-		<div class="container section-banner">
-			<div class="text-center">
-				<h2>西游能给予你的,不仅仅是通过考试</h2>
-			</div>
-			<div class="his-box">
-				<span class="left"></span>
-				<span class="left-center"><label></label></span>
-				<span class="center"><label class="center-label opc"></label></span>
-				<span class="right-center"><label></label></span>
-				<span class="right"></span>
-				<hr />
-			</div>
-			<div class="text-center">
-				<p class="his-info opc" id="his-info"></p>
-			</div>
-		</div>
-		<div class="container section-course">
-			<div class="course-box col-9 clearfix text-center">
-				<a href="" class="pull-left color-dx">
-					<img src="dist/img/icon_1.png">
-					<p>导学</p>
-				</a>
-				<div class="pull-right" style="width:67%;">
-					<div class="pull-right" style="width:100%;">
-						<a href="" class="pull-left color-jc">
-							<img src="dist/img/icon_2.png">
-							<span>基础</span>
-						</a>
-						<a href="" class="pull-right color-gy">
-							<span>公益</span>
-						</a>
-					</div>
-					<div class="pull-right" style="width:100%;margin-top:10px;">
-						<a href="" class="pull-left color-cc">
-							<span>冲刺</span>
-						</a>
-						<a href="" class="pull-left color-qh">
-							<img src="dist/img/icon_3.png">
-							<span>强化</span>
-						</a>
-						<a href="" class="pull-right color-mc">
-							<span>模串</span>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="course-box clearfix text-center">
-				<a href="" class="pull-left color-fx">
-					<span>分享</span>
-				</a>
-				<a href="" class="pull-left color-pj">
-					<img src="dist/img/icon_4.png">
-					<span>品鉴</span>
-				</a>
-				<a href="" class="pull-right color-xl">
-					<span>心理</span>
-				</a>
+	<div id="main-content" class="main-content"  style="background:#f4f4f4;">
+		<div class="container section-new-info" id="all-news-info">
+			<div style="padding:0 10px;">
+				<h4>当前位置：首页--院校咨询--<span>天津院校</span></h4>
+				<a id="close-news" href="news-mobile.html">X</a>
+				<h3 class="text-center">俄罗斯前首富涉3桩命案 遭俄全球通缉</h3>
+				<p>俄罗斯前首富、著名金融寡头霍多尔科夫斯基又摊上大事了！</p>
+				<p>两年前，他曾因俄总统普京特赦令而出狱，如今却再度遭到通缉，而且罪名更是升级到谋杀这样的重罪。</p>
+				<p>据俄罗斯卫星网23日消息，俄联邦调查委员会当天宣布了这一消息。调查委员会发言人马尔金表示，将在霍多尔科夫斯基缺席的情况下，对其下发逮捕令；并同时将其列入了海外追逃的名单之中。</p>
+				<p>据今日俄罗斯报道，早在本月月初，俄罗斯警方就已经展开了对霍多尔科夫斯基的调查。据称，他曾于1998年间，策划并实行了对西伯利亚地区城市涅夫捷尤甘斯克市长佩图科霍夫的谋杀。此外，霍多尔科夫斯基还涉嫌其他两桩谋杀未遂案。</p>
 			</div>
 		</div>
 		<footer class="footer">
@@ -100,6 +53,7 @@
 			</div>
 		</footer>
 	</div>
+<!-- 遮罩 -->
 	<div class="mask" id="mask"></div>
 	<div class="tool-box" id="tool-box">
 		<ul class="clearfix text-center">
@@ -110,7 +64,6 @@
 			<li><a href="job-mobile.html">加入</a></li>
 		</ul>
 	</div>
-
 	<script type="text/javascript" src="dist/js/zepto.min.js"></script>
 	<script type="text/javascript" src="dist/js/app-mobile.js"></script>
 </body>
